--- a/main.yml
+++ b/main.yml
@@ -6,7 +6,10 @@ advisor:
     apiName: insights
   channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/insights-advisor-frontend-build
+  productId: Red Hat Insights
   frontend:
+    module: advisor#./RootApp
+    section: operations
     paths:
       - /insights/advisor
     sub_apps:
@@ -19,19 +22,24 @@ advisor:
   source_repo: https://github.com/RedHatInsights/insights-advisor-frontend
 
 ansible:
-  title: Red Hat Ansible Automation Platform
+  title: Ansible Automation Platform
   frontend:
     sub_apps:
-      - id: automation-analytics
-        default: true
       - id: automation-hub
+        default: true
       - id: catalog
+      - id: automation-analytics
   top_level: true
 
 api-docs:
   title: API Documentation
   deployment_repo: https://github.com/RedHatInsights/api-frontend-build
   frontend:
+    module:
+      appName: api-docs
+      scope: apiDocs
+      module: ./RootApp
+      group: docs
     paths:
       - /docs/api
       - /docs
@@ -52,12 +60,14 @@ applications:
           method: isEntitled
           args:
             - insights
+        reload: applications/advisor
       - id: cost-management
         title: Cost Management
         permissions:
           method: isEntitled
           args:
             - cost_management
+        reload: applications/cost-management
     paths:
       - /settings/applications
   source_repo: https://github.com/RedHatInsights/settings-frontend
@@ -67,39 +77,52 @@ approval:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/approvals-frontend-deploy.git
   frontend:
+    module:
+      appName: approval
+      scope: approval
+      module: ./RootApp
     paths:
       - /ansible/catalog/approval
     reload: catalog/approval
   source_repo: https://github.com/RedHatInsights/approval-ui
 
 automation-analytics:
-  title: Automation Analytics
+  title: Analytics
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
+  productId: Ansible Automation Analytics
   frontend:
+    section: insights
     paths:
       - /ansible
       - /ansible/automation-analytics
     sub_apps:
+      - id : automation-calculator
+        title: Automation Calculator
+      - id: organization-statistics
+        title: Organization Statistics
+      - id: job-explorer
+        title: Job Explorer
       - id: clusters
         title: Clusters
         default: true
-      - id: organization-statistics
-        title: Organization Statistics
-      - id: automation-calculator
-        title: Automation calculator
       - id: notifications
         title: Notifications
   source_repo: https://github.com/RedHatInsights/tower-analytics-frontend
 
-
 automation-hub:
   title: Automation Hub
+  api:
+    versions:
+      - v3
   deployment_repo: https://github.com/RedHatInsights/ansible-hub-ui-build
+  productId: Ansible Automation Hub
   frontend:
     paths:
       - /ansible/automation-hub
@@ -122,6 +145,7 @@ catalog:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#insights-catalog'
   deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
   frontend:
@@ -167,8 +191,11 @@ compliance:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/compliance-frontend-build
   frontend:
+    section: security
+    module: compliance#./RootApp
     paths:
       - /insights/compliance
     sub_apps:
@@ -192,8 +219,10 @@ cost-management:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#koku'
   deployment_repo: https://github.com/RedHatInsights/cost-management-build
+  productId: Red Hat Cost Management
   description: >
     Cost Management is an application that provides users a view of their
     enterprise cost. Cost Management allows users to evaluate the cost on
@@ -207,13 +236,14 @@ cost-management:
     AWS) or deriving it based on a user set of rates.
   docs: https://koku.readthedocs.io/en/latest/
   frontend:
-    paths:
-      - /cost-management
     module:
       appName: cost-management
       group: cost-management
       scope: costManagement
       module: ./RootApp
+    paths:
+      - /cost-management
+      - /openshift/cost-management
     sub_apps:
       - id: ''
         title: Overview
@@ -283,6 +313,11 @@ dashboard:
   channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/insights-dashboard-build
   frontend:
+    module:
+      appName: dashboard
+      scope: dashboard
+      module: ./RootApp
+      group: insights
     paths:
       - /insights
       - /insights/dashboard
@@ -294,12 +329,13 @@ docs:
   frontend:
     sub_apps:
       - id: api-docs
-        reload: docs/api
+        reload: api
         default: true
+      - id: product
   top_level: true
 
 drift:
-  title: Configuration Drift
+  title: Drift
   api:
     subItems:
       drift:
@@ -316,7 +352,9 @@ drift:
         title: Historical system profiles
   deployment_repo: https://github.com/RedHatInsights/drift-frontend-build
   frontend:
+    module: drift#./RootApp
     title: Drift
+    section: operations
     paths:
       - /insights/drift
     sub_apps:
@@ -354,20 +392,21 @@ ingress:
 insights:
   title: Insights
   frontend:
-    title: Red Hat Insights
+    title: Insights
     sub_apps:
       - id: dashboard
         default: true
       - id: advisor
+      - id: drift
+      - id: inventory
       - id: vulnerability
       - id: compliance
-      - id: patch
-      - id: drift
       - id: policies
-      - id: inventory
-      - id: remediations
+      - id: patch
+      - id: subscriptions
+        section: business
       - id: registration
-      - id: ros
+      - id: remediations
   top_level: true
 
 integrations:
@@ -377,12 +416,12 @@ integrations:
     versions:
       - v1
   frontend:
-    app_base: notifications
     module:
       appName: integrations
       scope: notifications
       module: ./RootApp
       manifest: /apps/notifications/fed-mods.json
+    app_base: notifications
     paths:
       - /settings/integrations
 
@@ -394,7 +433,9 @@ inventory:
   channel: '#flip-mode-squad'
   deployment_repo: https://github.com/RedHatInsights/insights-inventory-frontend-build
   frontend:
+    module: inventory#./RootApp
     title: Inventory
+    section: operations
     paths:
       - /insights/inventory
   source_repo: https://github.com/RedHatInsights/insights-inventory-frontend
@@ -404,35 +445,30 @@ landing:
   deployment_repo: https://github.com/RedHatInsights/landing-page-frontend-build
   source_repo: https://github.com/RedHatInsights/landing-page-frontend
 
-migrations:
-  title: Migrations
+manifests:
+  title: Manifests
+  channel: '#subscription-central'
+  deployment_repo: https://github.com/RedHatInsights/subscription-central-ui-build
   frontend:
-    sub_apps:
-      - id: migration-analytics
-        default: true
-  top_level: true
-
-migration-analytics:
-  title: Migration Analytics
-  api:
-    versions:
-      - v1
-    alias:
-      - xavier
-    tags:
-      - value: "experimental"
-        title: "Experimental API"
-  deployment_repo: https://github.com/RedHatInsights/xavier-ui-deploy
-  frontend:
+    module:
+      appName: manifests
+      scope: manifests
+      module: ./RootApp
     paths:
-      - /migrations
-      - /migrations/migration-analytics
-  source_repo: https://github.com/project-xavier/xavier-ui
+      - /insights/subscriptions/manifests
+    reload: subscriptions/manifests
+  source_repo: https://github.com/RedHatInsights/subscription-central-ui
 
 my-user-access:
-  title: My user access
+  title: My User Access
   channel: '#platform-experience'
+  infoId: rbac
   frontend:
+    module:
+      appName: my-user-access
+      scope: rbac
+      module: ./RootApp
+      manifest: /apps/rbac/fed-mods.json
     app_base: rbac
     paths:
       - /settings
@@ -454,9 +490,6 @@ notifications:
         title: Red Hat Enterprise Linux
         group: notifications
         default: true
-      - id: openshift
-        title: OpenShift
-        group: notifications
   source_repo: https://github.com/RedHatInsights/notifications-frontend
 
 openshift:
@@ -465,8 +498,9 @@ openshift:
     versions:
       - v1
   deployment_repo: https://github.com/RedHatInsights/uhc-portal-frontend-deploy.git
+  productId: Red Hat Openshift Cluster Manager
   frontend:
-    title: Red Hat OpenShift Cluster Manager
+    title: OpenShift Cluster Manager
     paths:
       - /openshift
     sub_apps:
@@ -474,13 +508,28 @@ openshift:
         title: Clusters
         group: openshift
         default: true
-      - id: subscriptions
-        title: Subscriptions
-        group: openshift
       - id: overview
         title: Overview
         group: openshift
-  source_repo:
+      - id: subscriptions
+        title: Subscriptions
+        section: insights
+        sub_apps:
+            - id: openshift-container
+              title: Container Platform
+            - id: openshift-quota
+              title: Dedicated (Annual)
+              reload: './quota'
+            - id: openshift-dedicated
+              title: Dedicated (On-Demand)
+            - id: resource-limits
+              title: Dedicated (On-Demand limits)
+              reload: './quota/resource-limits'
+            - id: rhel
+              title: RHEL Subscriptions
+              reload: '../../insights/subscriptions/rhel'
+      - id: cost-management
+
   top_level: true
 
 patch:
@@ -488,9 +537,12 @@ patch:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#team-patchman'
   deployment_repo: https://github.com/RedHatInsights/patchman-ui-build
   frontend:
+    section: security
+    module: patch#./RootApp
     title: Patch
     paths:
       - /insights/patch
@@ -512,6 +564,8 @@ policies:
   channel: '#cloudservices-policies'
   deployment_repo: https://github.com/RedHatInsights/policies-ui-frontend-build
   frontend:
+    module: policies#./RootApp
+    section: security
     paths:
       - /insights/policies
   source_repo: https://github.com/RedHatInsights/policies-ui-frontend
@@ -525,9 +579,9 @@ rbac:
   permissions:
     method: isOrgAdmin
   frontend:
-    title: User access
+    module: rbac#./RootApp
+    title: User Access
     paths:
-      - /settings
       - /settings/rbac
     sub_apps:
       - id: users
@@ -544,6 +598,7 @@ registration:
   channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/registration-assistant-build
   frontend:
+    module: registration#./RootApp
     paths:
       - /insights/registration
   source_repo: https://github.com/RedHatInsights/registration-assistant/
@@ -556,25 +611,10 @@ remediations:
   channel: '#insights-remediations'
   deployment_repo: https://github.com/RedHatInsights/insights-remediations-frontend-build
   frontend:
+    module: remediations#./RootApp
     paths:
       - /insights/remediations
   source_repo: https://github.com/RedHatInsights/insights-remediations-frontend
-
-rhel-sw:
-  title: Red Hat Enterprise Linux
-  frontend:
-    sub_apps:
-      - id: all
-        title: All
-        default: true
-      - id: arm
-        title: ARM
-      - id: ibmpower
-        title: IBM Power
-      - id: ibmz
-        title: IBM Z systems
-      - id: x86
-        title: x86
 
 ros:
   title: Resource Optimization
@@ -584,9 +624,9 @@ ros:
   channel: '#team-ros'
   deployment_repo: https://github.com/RedHatInsights/ros-frontend-build
   frontend:
-      title: Resource Optimization
-      paths:
-          - /insights/ros
+    title: Resource Optimization
+    paths:
+        - /insights/ros
   source_repo: https://github.com/RedHatInsights/ros-frontend
 
 ruledev:
@@ -617,16 +657,21 @@ settings:
       - id: integrations
       - id: notifications
       - id: applications
+      - id: settings-documentation
+        title: Documentation
+        navigate: https://access.redhat.com/documentation/red_hat_cloud_platform/
 
 sources:
   title: Discovered Inventory
   api:
     versions:
       - v1
-  channel: '#insights_topology_svc'
+    isBeta: true
+  channel: '#sources'
   deployment_repo: https://github.com/RedHatInsights/sources-ui-deploy
   frontend:
     title: Sources
+    module: sources#./RootApp
     paths:
       - /settings/sources
   source_repo: https://github.com/RedHatInsights/sources-ui
@@ -635,7 +680,9 @@ staging:
   title: Staging Bundle
   frontend:
     sub_apps:
+      - id: starter
       - id: ruledev
+      - id: policies
   top_level: true
 
 storybook:
@@ -647,34 +694,56 @@ storybook:
   source_repo: https://github.com/RedHatInsights/insights-frontend-storybook
 
 subscriptions:
-  title: Subscription Watch
+  title: Subscriptions
   api:
     versions:
       - v1
-    tags:
-      - value: "experimental"
-        title: "Experimental API"
+    alias:
+      - rhsm-subscriptions
   channel: '#subscriptions'
   deployment_repo: https://github.com/RedHatInsights/curiosity-frontend-build
+  productId: Subscription Watch
   top_level: true
   frontend:
     paths:
-      - /subscriptions
+      - /insights/subscriptions
+      - /openshift/subscriptions
     sub_apps:
-      - id: rhel-sw
+      - id: rhel
+        title: All RHEL
         default: true
-        group: subscriptions
-      - id: openshift-sw
-        title: Red Hat OpenShift
-        group: subscriptions
+      - id: rhel-arm
+        title: ARM
+      - id: rhel-ibmpower
+        title: IBM Power
+      - id: rhel-ibmz
+        title: IBM Z systems
+      - id: rhel-x86
+        title: X86
+      - id: openshift-subscription
+        title: OpenShift Subscriptions
+        reload: '../openshift/subscriptions/openshift-container'
+      - id: subscriptions-documentation
+        title: Subscriptions Documentation
+        navigate: https://access.redhat.com/products/subscription-central?extIdCarryOver=true&sc_cid=701f2000001Css5AAC
   source_repo: https://github.com/RedHatInsights/curiosity-frontend
+
+trust:
+  title: Insights security
+  channel: '#advisor'
+  top_level: true
+  deployment_repo: https://github.com/RedHatInsights/trust-frontend-build
+  frontend:
+    paths:
+      - /security/insights
+  source_repo: https://github.com/RedHatInsights/trust-frontend
 
 user-preferences:
   title: User Preferences
   deployment_repo: https://github.com/RedHatInsights/user-preferences-frontend-build
   top_level: true
   frontend:
-    title: User preferences
+    title: User Preferences
     module:
       appName: user-preferences
       scope: userPreferences
@@ -684,19 +753,9 @@ user-preferences:
       - /user-preferences
     sub_apps:
       - id: email
-        title: Email preferences
+        title: Email Preferences
         default: true
         group: email
-      - id: notifications
-        title: Notifications
-        group: email
-        sub_apps:
-          - id: rhel
-            title: Red Hat Enterprise Linux
-            group: email
-          - id: openshift
-            title: Openshift
-            group: email
   source_repo: https://github.com/RedHatInsights/user-preferences-frontend
 
 vulnerability:
@@ -707,6 +766,8 @@ vulnerability:
   channel: '#team-vulnerability'
   deployment_repo: https://github.com/RedHatInsights/vulnerability-ui-build
   frontend:
+    section: security
+    module: vulnerability#./RootApp
     title: Vulnerability
     paths:
       - /insights/vulnerability
