Use modules for ros

--- a/main.yml
+++ b/main.yml
@@ -628,9 +628,11 @@ ros:
   channel: '#team-ros'
   deployment_repo: https://github.com/RedHatInsights/ros-frontend-build
   frontend:
-    title: Resource Optimization
-    paths:
-        - /insights/ros
+      module: ros#./RootApp
+      section: business
+      title: Resource Optimization
+      paths:
+          - /insights/ros
   source_repo: https://github.com/RedHatInsights/ros-frontend
 
 ruledev:
