--- a/main.yml
+++ b/main.yml
@@ -626,6 +626,7 @@ ros:
   deployment_repo: https://github.com/RedHatInsights/ros-frontend-build
   frontend:
     title: Resource Optimization
+    module: ros#./RootApp
     paths:
         - /insights/ros
   source_repo: https://github.com/RedHatInsights/ros-frontend
