use module for ros (#542)
* use module for ros

* add section=business to ros

--- a/main.yml
+++ b/main.yml
@@ -626,6 +626,8 @@ ros:
   deployment_repo: https://github.com/RedHatInsights/ros-frontend-build
   frontend:
     title: Resource Optimization
+    module: ros#./RootApp
+    section: business
     paths:
         - /insights/ros
   source_repo: https://github.com/RedHatInsights/ros-frontend
