--- a/main.yml
+++ b/main.yml
@@ -45,6 +45,7 @@ applications:
     apps:
       - cost-management
   frontend:
+    module: applications#./RootApp
     sub_apps:
       - id: advisor
         title: Advisor
