--- a/main.yml
+++ b/main.yml
@@ -92,6 +92,9 @@ application-services:
       - id: api-management
         title: "API Management"
         group: overview
+      - id: data-science
+        title: "Data Science"
+        group: overview
   top_level: true
   source_repo: https://github.com/bf2fc6cc711aee1a0c2a/mk-ui-host
 
