--- a/main.yml
+++ b/main.yml
@@ -632,6 +632,7 @@ openshift:
               title: RHEL Subscriptions
               reload: '../insights/subscriptions/rhel'
       - id: cost-management
+        section: insights
 
   top_level: true
 
