--- a/main.yml
+++ b/main.yml
@@ -563,6 +563,7 @@ openshift:
               title: RHEL Subscriptions
               reload: '../../insights/subscriptions/rhel'
       - id: cost-management
+        section: insights
 
   top_level: true
 
