sync user-preferences qa-stable

--- a/main.yml
+++ b/main.yml
@@ -798,6 +798,16 @@ user-preferences:
         title: Email Preferences
         default: true
         group: email
+      - id: notifications
+        title: Notifications
+        group: email
+        sub_apps:
+            - id: rhel
+              title: Red Hat Enterprise Linux
+              group: email
+            - id: openshift
+              title: Openshift
+              group: email
   source_repo: https://github.com/RedHatInsights/user-preferences-frontend
 
 vulnerability:
