Adds malware app support (#588)

--- a/main.yml
+++ b/main.yml
@@ -514,6 +514,24 @@ landing:
   deployment_repo: https://github.com/RedHatInsights/landing-page-frontend-build
   source_repo: https://github.com/RedHatInsights/landing-page-frontend
 
+malware:
+  title: Malware
+  permissions:
+    method: isInternal
+  api:
+    versions:
+      - v1
+  channel: '#advisor'
+  deployment_repo: https://github.com/RedHatInsights/malware-detection-frontend-build
+  frontend:
+    module: malware#./RootApp
+    paths:
+      - /insights/malware
+    sub_apps:
+      - id: signatures
+        title: Signatures
+  source_repo: https://github.com/RedHatInsights/malware-detection-frontend
+
 manifests:
   title: Manifests
   channel: '#subscription-central'
