Add Releases page to OpenShift Cluster Manager

--- a/main.yml
+++ b/main.yml
@@ -543,6 +543,9 @@ openshift:
       - id: overview
         title: Overview
         group: openshift
+      - id: releases
+        title: Releases
+        group: openshift
       - id: subscriptions
         title: Subscriptions
         section: insights
