--- a/main.yml
+++ b/main.yml
@@ -452,9 +452,9 @@ ingress:
       - v1
 
 insights:
-  title: Insights
+  title: Red Hat Enterprise Linux
   frontend:
-    title: Insights
+    title: Red Hat Enterprise Linux
     sub_apps:
       - id: dashboard
         default: true
