Make cloud connector available on prod-beta

--- a/main.yml
+++ b/main.yml
@@ -799,6 +799,7 @@ settings:
       - id: sources
       - id: integrations
       - id: notifications
+      - id: connector
       - id: applications
       - id: settings-documentation
         title: Documentation
