Add missing links and modules.

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -8,7 +8,7 @@
             "href": "/settings/my-user-access"
         },
         {
-            "title": "User access",
+            "title": "User Access",
             "expandable": true,
             "routes": [
                 {
