--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -14,16 +14,19 @@
                 {
                     "appId": "streams",
                     "title": "Kafka Instances",
+                    "isBeta": true,
                     "href": "/application-services/streams/kafkas"
                 },
                 {
                     "appId": "streams",
                     "title": "Service Accounts",
+                    "isBeta": true,
                     "href": "/application-services/streams/service-accounts"
                 },
                 {
                     "appId": "streams",
                     "title": "Resources",
+                    "isBeta": true,
                     "href": "/application-services/streams/resources"
                 },
                 {
