Add missing entries to chrome navigation.

--- a/chrome/settings-navigation.json
+++ b/chrome/settings-navigation.json
@@ -10,6 +10,11 @@
         {
             "title": "User Access",
             "expandable": true,
+            "permissions": [
+                {
+                    "method": "isEntitled"
+                }
+            ],
             "routes": [
                 {
                     "appId": "rbac",
