Adds ocm-advisor #668  duplication 🥸
fixes https://issues.redhat.com/browse/CCXDEV-5083

--- a/main.yml
+++ b/main.yml
@@ -496,6 +496,8 @@ openshift:
       - id: overview
         title: Overview
         group: openshift
+      - id: ocp-advisor
+        group: insights
       - id: subscriptions
         title: Subscriptions
         section: insights
@@ -517,6 +519,23 @@ openshift:
         section: insights
 
   top_level: true
+
+ocp-advisor: 
+  title: Advisor
+  source_repo: https://github.com/RedHatInsights/ocp-advisor-frontend
+  deployment_repo: https://github.com/RedHatInsights/ocp-advisor-frontend-build
+  frontend:
+    module: ocp-advisor#./RootApp
+    isHidden: true
+    paths:
+      - /openshift/insights/advisor
+    sub_apps:
+      - id: clusters
+        title: Clusters
+        reload: clusters 
+      - id: recommendations
+        title: Recommendations
+        reload: recommendations
 
 patch:
   title: Patch
