fix title case in apps services

--- a/chrome/application-services-navigation.json
+++ b/chrome/application-services-navigation.json
@@ -1,6 +1,6 @@
 {
     "id": "application-services",
-    "title": "Application services",
+    "title": "Application Services",
     "navItems": [
         {
             "appId": "applicationServices",
